--- a/website-root/fail.html
+++ b/website-root/fail.html
@@ -3,7 +3,7 @@ Copyright (c) Microsoft Corporation. All rights reserved.
 Licensed under the MIT License.
 -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8" />
         <title>Accessibility Insights service test page</title>
@@ -20,15 +20,15 @@ Licensed under the MIT License.
         <div>
             <h2>Radio</h2>
             <form>
-                <input id="input-radio-1" type="radio" name="color" value="red" checked /> <label for="input-radio-1">Red</label><br />
-                <input id="input-radio-2" type="radio" name="color" value="green" /> <label for="input-radio-2">Green</label><br />
-                <input id="input-radio-3" type="radio" name="color" value="blue" /> <label for="input-radio-3">Blue</label>
+                <input id="input-radio-1" type="radio" name="color" value="red" checked /> Red<br />
+                <input type="radio" name="color" value="green" /> Green<br />
+                <input type="radio" name="color" value="blue" /> Blue
             </form>
         </div>
 
         <h1>Images</h1>
         <img id="decorative" role="presentation" alt="Some alt text" src="./img1.png" />
         <image id="decorative-alt-empty" height="4px" alt="" src="./img1.png" />
-        <img id="non-decorative" alt="meaningful text" src="./img1.png" />
+        <img id="non-decorative" src="./img1.png" />
     </body>
 </html>
