Add a third link

--- a/website-root/pass.html
+++ b/website-root/pass.html
@@ -14,6 +14,7 @@ Licensed under the MIT License.
         <ul>
             <li><a href="linked1/">Link 1</a></li>
             <li><a href="linked2/">Link 2</a></li>
+            <li><a href="linked3/">Link 3</a></li>
         </ul>
 
         <h1>Input radio - Native Widgets</h1>
